# worsec

./: .editorconfig  README.md  worsec.cabal
app/: Lib.hs  Main.hs  Parser.hs
