cabal-version:      2.4
name:               worsec
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             pacokwon
maintainer:         haechank@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:

executable worsec
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Lib Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0,
                      vector ^>= 0.12.3.1
    hs-source-dirs:   app
    default-language: Haskell2010
